<resources>
    <string name="app_name">Test1</string>
    <string name="title">ม.สยาม</string>
    <string name="log_in">Log in</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="new_register">New Register</string>
    <string name="name">Name</string>

    <!--For Dialog-->
    <string name="titleHaveSpace">มีช่องว่าง</string>
    <string name="messageHaveSpace">กรุณากรอกทุกช่อง</string>
    <string name="titleUserFalse">ไม่มี User นี้ในฐานข้อมูล</string>
    <string name="messageUserFalse">ลองใหม่ User ผิด</string>
    <string name="titlePasswordFalse">Password ผิด</string>
    <string name="messagePasswordFalse">ลองใหม่ Password ผิด</string>
    <string name="title_activity_maps">Map</string>

</resources>
