<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.test1.NewRegisterActivity">
    <RelativeLayout
        android:id="@+id/relTop"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btnBack"
            android:src="@mipmap/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerInParent="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/h1"
            android:text="@string/new_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <ScrollView
        android:background="@color/colorPrimaryLight"
        android:layout_above="@+id/btnNewRegister"
        android:layout_below="@+id/relTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="#82ffff"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_siam"
                android:layout_width="195dp"
                android:layout_height="235dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/ic_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/edtName"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:hint="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/ic_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/edtUser"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:hint="@string/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/ic_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/edtPassword"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:hint="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>




    <Button
        android:id="@+id/btnNewRegister"
        android:background="@color/colorPrimary"
        android:text="@string/new_register"
        android:textColor="@color/textColorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
